--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-13  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* configure.in: Rename --enable-use-lisp-union-type to
+	--enable-check-lisp-object-type and define CHECK_LISP_OBJECT_TYPE
+	instead of USE_LISP_UNION_TYPE.
+
 2012-06-12  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (HAVE_PROCFS, _STRUCTURED_PROC): New AC_DEFINEs.
