--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-13  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/data.$(O)): Update dependencies.
+
 2012-06-13  Glenn Morris  <rgm@gnu.org>
 
 	* s/bsd-common.h (BSD4_3):
