--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,11 @@
 2012-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/cl-lib.el (cl--defsubst-expand): Autoload inliner
+	(bug#11649).
+
+	* emacs-lisp/macroexp.el (macroexp--compiler-macro): New function.
+	(macroexp--expand-all): Use it.
+
 	* emacs-lisp/cl-macs.el (cl--transform-function-property): Remove.
 	(cl-define-setf-expander, cl-deftype, cl-define-compiler-macro):
 	Use `cl-function' instead.
