Fix bug #11677 with segfault when deleting windows under -batch.
 src/window.c (Fdelete_other_windows_internal)
 (Fdelete_window_internal): Don't access frame's mouse highlight
 info of the initial frame.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-16  Eli Zaretskii  <eliz@gnu.org>
+
+	* window.c (Fdelete_other_windows_internal)
+	(Fdelete_window_internal): Don't access frame's mouse highlight
+	info of the initial frame.  (Bug#11677)
+
 2012-06-14  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* .gdbinit (xgetint): Fix recently-introduced paren typo.
