--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-16  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* category.h (CHAR_HAS_CATEGORY): Define as inline.
+	(CATEGORY_MEMBER): Enforce 1/0 value.
+	* category.c (_temp_category_set): Remove.
+
 2012-06-16  Eli Zaretskii  <eliz@gnu.org>
 
 	* window.c (Fdelete_other_windows_internal)
