--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -6,6 +6,8 @@
 	row.
 	(handle_face_prop): Use chunk-relative overlay string index when
 	indexing into it->string_overlays array.  (Bug#11653)
+	(set_cursor_from_row): Use the leftmost glyph as GLYPH_BEFORE, not
+	the rightmost.  (Bug#11720)
 
 2012-06-16  Andreas Schwab  <schwab@linux-m68k.org>
 
